--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+avto.m3u
 ad-freeiptvservercom-08-05-2020-1.m3u
 ad-freeiptvservercom-08-05-2020-10.m3u
 ad-freeiptvservercom-08-05-2020-11.m3u
@@ -40,3 +40,13 @@ ad-freeiptvservercom-14-10-2022.m3u
 chs.m3u
 videos.m3u8
 xx2.m3u
+bla.m3u
+playlist.m3u8
+playlist-new.m3u8
+ProSieben HD DE_iptvlister.com.m3u8
+prosieben_576p-iptvcat.com.m3u8
+ru.m3u
+Russia-2.m3u8
+test1.m3u
+test34.m3u
+tv.m3u
